force-app/main/default/objects/Product__c/fields/Price__c.field-meta.xml
<CustomField>
    <fullName>Price__c</fullName>
    <description>Price per unit</description>
    <label>Unit Price</label>
    <precision>6</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>