force-app/main/default/objects/Product__c/fields/Quantity_Reserved__c.field-meta.xml
<CustomField>
    <fullName>Quantity_Reserved__c</fullName>
    <description>Number of units reserved</description>
    <label>Quantity Reserved</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>