force-app/main/default/objects/Product__c/fields/Tax_Rate__c.field-meta.xml
<CustomField>
    <fullName>Tax_Rate__c</fullName>
    <description>Product tax rate</description>
    <label>Tax Rate</label>
    <precision>6</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>